style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
* {
    box-sizing: border-box;
}

body{
    background: #EEF9BF;
    font-family: 'Roboto', sans-serif;
}

#header{
    margin: 50px auto;
    width: 100%;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#header p{
    position: fixed;
    right: 0;
    top: 0;
    color: #75B79E;
    text-align: center;
    font-size: 30px;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
}

#header h1{
    font-size: 56px;
    font-weight: 700;
    color: #75B79E;
    text-align: center;
}

#container{
    margin: auto;
    width: 80%;
    /*Altura máxima de 2 cards*/
    max-height: 400px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    align-content: center;

}

.face {
    width: 117px;
    height: 146px;
    background: #a7e9af;
    border-radius: 5px;
    border: 1px solid #99CEAB;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 17px;
    cursor: pointer;
    transition: all 500ms;
    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    backface-visibility: hidden;   
    transform-style: preserve-3d;
}


.back-face {
    transform: rotateY(180deg);
}

.back-face-rotate {
    transform: rotateY(0deg);
}

.front-face-rotate {
    transform: rotateY(-180deg);
    
}

.card{
    width: 117px;
    height: 146px;
    margin: 17px;
}

.card:hover .face{
    scale: 1.1;
}

.card img{
    width: 100px;
    height: 100px;
    object-fit: cover;
}


@media(max-width: 1080px){
    #container{
        max-height: 100%;
        flex-direction: row;

    }
}

@media(max-width: 530px){
    #container{
        max-height: 100%;
        flex-direction: column;

    }
}

